# pennapps25

./: .gitignore  LICENSE  README.md  data.json  pest_inference.py
backend/: Pest.py  a.json  data.json  main.py  pest_inference.py  pests.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  interfaces.tsx
frontend/src/components/: LoadingAnimation.tsx  Slideshow.tsx
frontend/src/css/: LoadingAnimation.css
