[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maxwell Ye <maxwellzye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-multipart = "^0.0.10"
opencv-python = "^4.10.0.84"
inference-sdk = "^0.19.0"
roboflow = "1.1.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
